# mini-sql-service

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_06_12_0001-a1b2c3d4e5f6_create_connections_table.py  2026_06_12_0002-b2c3d4e5f6a1_create_query_history_table.py  2026_06_12_0003-c3d4e5f6a1b2_add_explain_to_queryeventtype.py
src/: checkpointer.py  config.py  containers.py  db.py  exceptions.py  llm.py  log_config.py  main.py  schemas.py  uow.py
src/chart_agent/: api.py  graph.py  tools.py
src/chart_agent/agents/: chart_agent.py  sql_agent.py
src/connections/: api.py  exceptions.py  introspector.py  models.py  repository.py  schemas.py  service.py
src/history/: api.py  models.py  repository.py  schemas.py  service.py
src/queries/: api.py  exceptions.py  executor.py  prompt.py  schemas.py  service.py  validator.py
