[project]
name = "mini-sql-service"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "dependency-injector>=4.49.0",
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.0",
    "python-dateutil>=2.9.0",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "ANN"]
ignore = ["ANN401", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
